# cof_tester

./: .gitignore  AGENTS.md  CODEMAP_ACQUISITION.md  CODEMAP_CORE.md  CODEMAP_DIAGNOSTICS.md  CODEMAP_LOGGING.md  CODEMAP_PROCESSING.md  CODEMAP_PROTOCOLS.md  CODEMAP_UI.md  CODING_PRINCIPLES.md  ORCHESTRATOR_GUIDE.md  README.md  TESTING_PRINCIPLES.MD  bdc  cof_tester_plan.md  conftest.py  prompts.md  pyproject.toml
.beads/: deletions.jsonl  issues.jsonl
plan/: ui-fixes.md
src/gsdv/: __init__.py  errors.py  main.py  models.py
src/gsdv/acquisition/: __init__.py  acquisition_engine.py  ring_buffer.py
src/gsdv/config/: __init__.py  preferences.py
src/gsdv/controller/: __init__.py  sensor_controller.py
src/gsdv/diagnostics/: __init__.py  cli.py  sensor_simulator.py  status_bar.py
src/gsdv/logging/: __init__.py  formats.py  (+2 more)
tests/: __init__.py  conftest.py  create_fixtures.py  reproduce_issue_1gc.py  test_acquisition.py  test_bias.py  test_channel_selector.py  test_connection_panel.py  test_decimation.py  test_discovery.py  test_edge_cases.py  test_errors.py  test_filename.py  test_filters.py  test_integration_simulator.py  test_issue_90r.py  test_issue_rw5_repro.py  test_logging.py  test_logging_rotation.py  test_main_window.py  test_main_window_status_bar.py  test_main_window_time_selector.py  test_numeric_display.py  test_performance.py  test_plot_widget.py  test_preferences.py  test_processing_engine.py  test_protocols.py  test_rdt_udp.py  test_recording_controls.py  test_status_bar.py  test_time_window_selector.py  test_ui_accessibility.py  test_units.py
tests/fixtures/: netftapi2.xml
(+17 files in other folders)
