[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsdv"
version = "0.1.0"
description = "Gamma Sensor Data Viewer - Real-time data acquisition and visualization for ATI Gamma series F/T sensors"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sparta Biomedical" }
]
keywords = ["force-torque", "sensor", "data-acquisition", "visualization", "ATI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "PySide6>=6.6.0",
    "pyqtgraph>=0.13.0",
    "numpy>=1.26.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
gsdv = "gsdv.main:main"

[project.gui-scripts]
gsdv-gui = "gsdv.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gsdv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -p no:pytest-qt"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
